# holy-war-detector

./: README.md  full-example.env  pyproject.toml
bot/: __main__.py  di.py
bot/handlers/: __init__.py  general.py
bot/utils/: __init__.py  config.py  on_startup.py
systemd/: bot.service
