[tool.poetry]
name = "bot"
version = "2.2.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.18.0"
aiogram = "^2.13"
urlpath = "^1.1.7"
pydantic = "^1.8.2"
aioredis = "^1.3.1"
dependency-injector = "^4.34.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
